--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 
     border-radius: 8px;
 
-    width: 100%;
+    width: 90%;
     max-width: 700px;
 
     position: absolute;
@@ -21,5 +21,21 @@
 
 .custom-title{
     position: relative;
-    font-size: 30px
+}
+
+.custom-title h2{
+    font-size: 30px;
+    background-color: white;
+    padding-right: 10px;
+    display: inline-block;
+    position: relative;
+}
+
+.custom-title > .linha{
+    width: 100%;
+    height: 3px;
+    background-color: #777;
+    position: absolute;
+    top: 55px;
+    left: 0;
 }
